Fix display for extra large and small numbers
Fixes an issue where numbers with lots of digits
were overflowing the display area

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     display: grid;
     gap: 1rem;
     grid-template-columns: 6rem 6rem 6rem 6rem;
-    padding: 3rem;
+    padding: 4rem;
     width: fit-content;   
 }
 
@@ -44,13 +44,15 @@ button#zero {
 }
 
 #display {
+    align-items: flex-end;
     border-bottom: 1px solid #a5a5a5;
     color: #e5e5e5;
+    display: flex;
     font-size: 8rem;
     grid-column: 1 / span 4;
+    height: 9rem;
+    justify-content: right;
     margin-bottom: 1rem;
-    padding: 1rem;
-    text-align: right;
 }
 
 
